--- a/tasks.json
+++ b/tasks.json
@@ -1,9 +1,16 @@
-{
-  "1": {
+[
+  {
     "id": 1,
     "description": "this",
     "status": "not done",
-    "created_at": "2024-08-10 21:21:34.201706+00:00",
-    "updated_at": "2024-08-10 21:21:34.201706+00:00"
+    "created_at": "2024-08-11 21:39:49.730393+00:00",
+    "updated_at": "2024-08-11 21:39:49.730393+00:00"
+  },
+  {
+    "id": 2,
+    "description": "another",
+    "status": "not done",
+    "created_at": "2024-08-11 21:39:55.059706+00:00",
+    "updated_at": "2024-08-11 21:39:55.059706+00:00"
   }
-}
+]
